Fixing white spaces after icons.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,7 +45,7 @@ p {
 }
 
 .icon {
-width:30px;
+width:28px;
 height:30px;
 display:block;
 text-indent:-9999px;
